; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_cgroup.c_cgroup_root_from_opts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_cgroup.c_cgroup_root_from_opts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgroupfs_root = type { i32, i32, i32, i64 }
%struct.cgroup_sb_opts = type { i32, i32, i32, i64, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cgroupfs_root* (%struct.cgroup_sb_opts*)* @cgroup_root_from_opts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cgroupfs_root* @cgroup_root_from_opts(%struct.cgroup_sb_opts* %0) #0 {
  %2 = alloca %struct.cgroupfs_root*, align 8
  %3 = alloca %struct.cgroup_sb_opts*, align 8
  %4 = alloca %struct.cgroupfs_root*, align 8
  store %struct.cgroup_sb_opts* %0, %struct.cgroup_sb_opts** %3, align 8
  %5 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %6 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %5, i32 0, i32 3
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %11 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %10, i32 0, i32 4
  %12 = load i32, i32* %11, align 8
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %9
  store %struct.cgroupfs_root* null, %struct.cgroupfs_root** %2, align 8
  br label %74

15:                                               ; preds = %9, %1
  %16 = load i32, i32* @GFP_KERNEL, align 4
  %17 = call %struct.cgroupfs_root* @kzalloc(i32 24, i32 %16)
  store %struct.cgroupfs_root* %17, %struct.cgroupfs_root** %4, align 8
  %18 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %19 = icmp ne %struct.cgroupfs_root* %18, null
  br i1 %19, label %24, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  %23 = call %struct.cgroupfs_root* @ERR_PTR(i32 %22)
  store %struct.cgroupfs_root* %23, %struct.cgroupfs_root** %2, align 8
  br label %74

24:                                               ; preds = %15
  %25 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %26 = call i32 @init_root_id(%struct.cgroupfs_root* %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %34, label %28

28:                                               ; preds = %24
  %29 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %30 = call i32 @kfree(%struct.cgroupfs_root* %29)
  %31 = load i32, i32* @ENOMEM, align 4
  %32 = sub nsw i32 0, %31
  %33 = call %struct.cgroupfs_root* @ERR_PTR(i32 %32)
  store %struct.cgroupfs_root* %33, %struct.cgroupfs_root** %2, align 8
  br label %74

34:                                               ; preds = %24
  %35 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %36 = call i32 @init_cgroup_root(%struct.cgroupfs_root* %35)
  %37 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %38 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %37, i32 0, i32 3
  %39 = load i64, i64* %38, align 8
  %40 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %41 = getelementptr inbounds %struct.cgroupfs_root, %struct.cgroupfs_root* %40, i32 0, i32 3
  store i64 %39, i64* %41, align 8
  %42 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %43 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  %45 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %46 = getelementptr inbounds %struct.cgroupfs_root, %struct.cgroupfs_root* %45, i32 0, i32 2
  store i32 %44, i32* %46, align 8
  %47 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %48 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %59

51:                                               ; preds = %34
  %52 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %53 = getelementptr inbounds %struct.cgroupfs_root, %struct.cgroupfs_root* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %56 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %55, i32 0, i32 1
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @strcpy(i32 %54, i32 %57)
  br label %59

59:                                               ; preds = %51, %34
  %60 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %61 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %64, label %72

64:                                               ; preds = %59
  %65 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  %66 = getelementptr inbounds %struct.cgroupfs_root, %struct.cgroupfs_root* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 8
  %68 = load %struct.cgroup_sb_opts*, %struct.cgroup_sb_opts** %3, align 8
  %69 = getelementptr inbounds %struct.cgroup_sb_opts, %struct.cgroup_sb_opts* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 8
  %71 = call i32 @strcpy(i32 %67, i32 %70)
  br label %72

72:                                               ; preds = %64, %59
  %73 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %4, align 8
  store %struct.cgroupfs_root* %73, %struct.cgroupfs_root** %2, align 8
  br label %74

74:                                               ; preds = %72, %28, %20, %14
  %75 = load %struct.cgroupfs_root*, %struct.cgroupfs_root** %2, align 8
  ret %struct.cgroupfs_root* %75
}

declare dso_local %struct.cgroupfs_root* @kzalloc(i32, i32) #1

declare dso_local %struct.cgroupfs_root* @ERR_PTR(i32) #1

declare dso_local i32 @init_root_id(%struct.cgroupfs_root*) #1

declare dso_local i32 @kfree(%struct.cgroupfs_root*) #1

declare dso_local i32 @init_cgroup_root(%struct.cgroupfs_root*) #1

declare dso_local i32 @strcpy(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
